<resources>
    <string name="app_name">LockingPomodoro</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_pomodoro">Hello Pomodoro</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send iiit!</string>>

    <string name="task_label">Task: </string>
    <string name="weight_label">Weight: </string>
    <string name="interval_label">Interval: </string>
    <string name="task_hint">enter task here</string>
    <string name="task_text">enter task</string>
    <string name="enter_interval">enter interval (min)</string>
    <string name="enter_weight">enter weight</string>
    <string name="locked_task">You reached the weight for this task, choose another.</string>

    <string name="focus_task">Task_Name</string>
    <string name="count_task">Add</string>
    <string name="dismiss_task">Dismiss</string>
    <string name="abandon">Abandon Task</string>

    <string name="dialog_delete_task">Delete Task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="end_break">End Break</string>
    <string name="break_title">Enjoy a well deserved break!</string>

</resources>
