<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">

    <!--android:onClick="onScheduleClick"-->

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="34dp"
        android:text="@string/weight_label"
        app:layout_constraintBottom_toTopOf="@+id/interval_label"
        app:layout_constraintEnd_toStartOf="@+id/enterWeight"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskLabel" />

    <TextView
        android:id="@+id/taskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/task_label"
        app:layout_constraintBottom_toTopOf="@+id/weightLabel"
        app:layout_constraintEnd_toStartOf="@+id/enterTask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/enterTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/task_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/enterWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/enterWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/enter_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightLabel"
        app:layout_constraintTop_toBottomOf="@+id/enterTask" />

    <TextView
        android:id="@+id/interval_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="200dp"
        android:text="@string/interval_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enter_interval"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <EditText
        android:id="@+id/enter_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/enter_interval"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interval_label"
        app:layout_constraintTop_toBottomOf="@+id/enterWeight"
        app:layout_constraintVertical_bias="0.293" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:foreground="@android:drawable/ic_input_add"
        android:src="@drawable/basic_plus_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interval_label"
        app:layout_constraintVertical_bias="1.0"
        tools:src="@drawable/basic_plus_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>